--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                <p>CityScapes is great for any travel agency or tour agency, that wishes to showcase the focal points of
                     a city. If you want a unique looking landing page that has a unique artistic style that will attract
                     clients, then this is the template for you. Go ahead and download it for free from Github.</p>
-               <a class="btn" href="https://github.com/otabek1980?tab=repositories" >Download</a>
+               <a class="btn btn-outline-teal" href="https://github.com/otabek1980?tab=repositories" >Download</a>
           </div>
 
           <div class="content-wrapper" id="contact">
